k8s/consumer.yaml
kind: Service
apiVersion: v1
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  selector:
    app: consumer
  ports:
  - protocol: TCP
    port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "checkout"
        dapr.io/app-port: "80"
    spec:
      containers:
      - name: consumer
        image: nhatthai/dotnet5-consumer.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
